# rebgzf

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_STATUS.md  LICENSE  README.md  cliff.toml  clippy.toml  release-plz.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: audit.yml  check.yml  release.yml
benches/: reader.rs  transcode.rs
conda/: README.md  meta.yaml
docs/: CONTRIBUTING.md  DEVELOPING.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_deflate_parser.rs  fuzz_transcode.rs  fuzz_verify.rs
scripts/: install-hooks.sh  pgo-build.sh  profile.sh
scripts/hooks/: pre-commit
src/: error.rs  lib.rs  mmap.rs
src/bgzf/: constants.rs  detector.rs  index.rs  mod.rs  writer.rs
src/bits/: mod.rs  reader.rs  slice_reader.rs  traits.rs  writer.rs
src/deflate/: mod.rs  parser.rs  tables.rs  tokens.rs
src/gzip/: header.rs  mod.rs
src/huffman/: decoder.rs  encoder.rs  mod.rs  tables.rs
src/reader/: chunk.rs  fetcher.rs  marker.rs  mod.rs  replacer.rs  speculative.rs  window_map.rs
src/transcoder/: block_scanner.rs  boundary.rs  encoding.rs  mod.rs  parallel.rs  parallel_decode.rs  single.rs  splitter.rs  window.rs
tests/: integration.rs  reader.rs
